about section overflow fix

--- a/src/styles/media/tablet/aboutTablet.css
+++ b/src/styles/media/tablet/aboutTablet.css
@@ -7,6 +7,7 @@
     background-size: none;
     z-index: 100;
     padding-top: 1130px;
+    overflow: hidden;
   }
 
   .about__header {
@@ -29,7 +30,7 @@
     display: block;
     position: absolute;
     margin-top: -450px;
-    padding-left: 10px;
+    margin-left: 30px;
     z-index: -1;
   }
 
